--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
     margin: 0;
 }
 img{
-    
+    width: 300px;
+    height: 200px;
 }
 h1{
     font-size: 50px;
@@ -15,10 +16,21 @@ h2{
     font-size: 40px;
 }
 .title{
-    color: #eb2f06;
+    color: #FF0000;
 }
 .ph{
     color: #696969;
+}
+.last{
+    width: 300px;
+    margin: auto;
+    box-shadow: 0px 0px 23px 10px rgba(0,0,0,0.63);
+    padding: 40px;
+    border-radius: 35px;
+    text-align: justify;
+}
+.last p{
+    width: 300px;
 }
 .flex{
     display: flex;
@@ -28,7 +40,8 @@ h2{
     padding: 5%;
 }
 .half img{
-    width: 40%;
+    width: 80%;
+    height: 85%;
 }
 .banner img{
     width: 40%;
@@ -40,11 +53,14 @@ h2{
 .half p{
     font-size: 100%;
 }
+.hyy{
+    text-align: center;
+}
 .link{
     text-decoration: none;
     background-image: linear-gradient(red,#ff7300);
     padding: 10px 40px;
-    border-radius: 15px 0 15px 0;
+    border-radius: 25px 0 25px 0;
     font-weight: 700;
     color: white;
 }
