--- a/style.css
+++ b/style.css
@@ -52,6 +52,13 @@ h2{
 .fffoootttr h1{
     margin: 60px auto;
 }
+.Footer{
+    background-color: black;
+    text-align: center;
+}
+.Footer h1{
+    font-size: 30px;
+}
 .fffoootttr p{
     margin: 60px auto;
 }
